<resources>
  <string name="app_name">AsyncHttpClient</string>

  <string name="action_refresh">刷新</string>
  <string name="btn_upload">上传</string>

  <string name="choose_photo">选择相片</string>

  <string name="hint_book_isbn">ISBN</string>
  <string name="hint_book_title">Title</string>
  <string name="hint_book_author">Author</string>

  <string name="hello_world">Hello world!</string>
  <string name="action_settings">Settings</string>

  <string name="title_activity_web_view">Web View</string>
  <string name="title_activity_book">Download Book</string>
  <string name="title_activity_upload_image">Upload Image</string>
</resources>
