<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context=".UploadImageActivity">

  <EditText
      android:id="@+id/txtIsbn"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/hint_book_isbn"/>

  <EditText
      android:id="@+id/txtTitle"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/txtIsbn"
      android:hint="@string/hint_book_title"/>

  <EditText
      android:id="@+id/txtAuthor"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/txtTitle"
      android:hint="@string/hint_book_author"/>

  <Button
      android:id="@+id/btnUpload"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/txtAuthor"
      android:text="@string/btn_upload"/>

  <Button
      android:id="@+id/btnChoosePhoto"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/btnUpload"
      android:text="@string/choose_photo"/>

  <ImageView
      android:id="@+id/imageView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/btnChoosePhoto"
      android:contentDescription="@string/app_name"/>

</RelativeLayout>
