<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context=".MainActivity">

  <Button
      android:id="@+id/btnWebView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/title_activity_web_view"/>

  <Button
      android:id="@+id/btnDownloadBook"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/btnWebView"
      android:text="@string/title_activity_book"/>

  <Button
      android:id="@+id/btnUploadImage"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/btnDownloadBook"
      android:text="@string/title_activity_upload_image"/>

</RelativeLayout>
